# agent-learning

./: .env.example  .gitignore  main.py  mise.toml  pyproject.toml
data/: agent_memory.json  deepseek_result.json  demo_result.json
docs/: README.md  agent_value.md  deepseek_result.md  development_spec.md  todo.md
prompts/: system.txt
src/app/: __init__.py  agent.py  cli.py  config.py  memory.py  models.py  tools.py
versions/: anthropic_agent_zh.py  deepseek_agent_v1.py
